# nbnet

./: Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml
crates/execution/: Cargo.toml  README.md
crates/execution/src/: executor.rs  lib.rs
crates/node/: Cargo.toml  README.md
crates/node/src/: bench.rs  cluster.rs  main.rs
crates/node/tests/: e2e_rpc.rs
crates/precompile/: Cargo.toml  README.md
crates/precompile/src/: lib.rs
crates/rpc/: Cargo.toml  README.md
crates/rpc/src/: lib.rs
crates/state/: Cargo.toml  README.md
crates/state/src/: lib.rs  state.rs
crates/txpool/: Cargo.toml  README.md
crates/txpool/src/: lib.rs
crates/types/: Cargo.toml  README.md
crates/types/src/: config.rs  genesis.rs  lib.rs  receipt.rs  tx.rs
docs/: architecture.md
