[workspace]
resolver = "2"
members = [
    "crates/types",
    "crates/state",
    "crates/execution",
    "crates/rpc",
    "crates/txpool",
    "crates/precompile",
    "crates/node",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
repository = "https://github.com/rust-util-collections/nbnet"
keywords = ["evm", "ethereum", "consensus", "hotstuff2", "bft"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
ruc = "10.0"
postcard = { version = "1.1", features = ["alloc"] }
blake3 = "1"
ed25519-dalek = { version = "2.2", features = ["serde", "rand_core", "batch"] }
# rand stays at 0.8 for ed25519-dalek 2.x compat (uses rand_core 0.6)
rand = "0.8"
vsdb = "13.0"
revm = { version = "36", default-features = false, features = ["std"] }
alloy-primitives = { version = "1.5", features = ["serde"] }
alloy-rlp = "0.3"
alloy-consensus = { version = "1.7", default-features = false, features = ["std", "k256"] }
alloy-eips = { version = "1.7", default-features = false, features = ["std", "k256"] }
alloy-signer = { version = "1.7" }
alloy-signer-local = { version = "1.7" }
alloy-network = { version = "1.7" }
k256 = { version = "0.13", features = ["ecdsa"] }
litep2p = "0.13"
async-trait = "0.1"
futures = "0.3"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
dirs = "6"
hex = "0.4"
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
parking_lot = "0.12"
criterion = { version = "0.5", features = ["html_reports"] }

# hotmint core crates
hotmint = "0.8.6"
hotmint-types = "0.8.6"
hotmint-crypto = "0.8.6"
hotmint-consensus = "0.8.6"
hotmint-mempool = "0.8.6"
hotmint-mgmt = "0.8.6"

# nbnet crates
nbnet-types = { path = "crates/types" }
nbnet-state = { path = "crates/state" }
nbnet-execution = { path = "crates/execution" }
nbnet-rpc = { path = "crates/rpc" }
nbnet-txpool = { path = "crates/txpool" }
nbnet-precompile = { path = "crates/precompile" }
nbnet-node = { path = "crates/node" }
