[package]
name = "nbnet-execution"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nbnet-types = { workspace = true }
nbnet-state = { workspace = true }
nbnet-txpool = { workspace = true }
nbnet-precompile = { workspace = true }
hotmint-consensus = { workspace = true }
hotmint-types = { workspace = true }
hotmint-mempool = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
revm = { workspace = true }
alloy-primitives = { workspace = true }
alloy-consensus = { workspace = true }
ruc = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
