[package]
name = "nbnet-node"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "nbnet_node"
path = "src/lib.rs"

[[bin]]
name = "nbnet"
path = "src/main.rs"

[[bin]]
name = "bench-nbnet"
path = "src/bench.rs"

[dependencies]
hotmint = { workspace = true }
hotmint-types = { workspace = true }
hotmint-consensus = { workspace = true }
hotmint-mempool = { workspace = true }
hotmint-crypto = { workspace = true }
hotmint-mgmt = { workspace = true }
nbnet-types = { workspace = true }
nbnet-state = { workspace = true }
nbnet-execution = { workspace = true }
nbnet-rpc = { workspace = true }
nbnet-txpool = { workspace = true }
nbnet-precompile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
ruc = { workspace = true }
clap = { workspace = true }
litep2p = { workspace = true }
parking_lot = { workspace = true }
hex = { workspace = true }
vsdb = { workspace = true }
alloy-primitives = { workspace = true }
alloy-consensus = { workspace = true }
alloy-eips = { workspace = true }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
alloy-network = { workspace = true }
reqwest = { version = "0.12", features = ["json", "blocking"] }

[dev-dependencies]
alloy-rlp = { workspace = true }
