[package]
name = "nbnet-rpc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nbnet-types = { workspace = true }
nbnet-state = { workspace = true }
nbnet-execution = { workspace = true }
hotmint-consensus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
alloy-primitives = { workspace = true }
alloy-consensus = { workspace = true }
ruc = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
