[package]
name = "nbnet-state"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nbnet-types = { workspace = true }
serde = { workspace = true }
revm = { workspace = true }
alloy-primitives = { workspace = true }
vsdb = { workspace = true }
ruc = { workspace = true }
blake3 = { workspace = true }
