[package]
name = "nbnet-types"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
revm = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rlp = { workspace = true }
alloy-consensus = { workspace = true }
alloy-eips = { workspace = true }
ruc = { workspace = true }

[dev-dependencies]
k256 = { workspace = true }
rand = { workspace = true }
